--- a/package.json
+++ b/package.json
@@ -4,13 +4,26 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^9.6.6",
+    "framer-motion": "^6.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-loading-overlay": "^1.0.1",
+    "react-meta-tags": "^1.0.1",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "5.0.0",
+    "react-sidebar": "^3.0.2",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^8.1.1",
+    "sass": "^1.49.7",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
